# OCamlTyEff

./: .gitignore  .ocamlformat  LICENSE  OCamlTyEff.opam  OCamlTyEff.opam.locked  OCamlTyEff.opam.template  README.md  dune  dune-project
.github/workflows/: build-and-test.yml
examples/: 6hylo.ml
examples.t/: 1rbmap.ml  2parser.ml  3arith.ml  4memo.ml  5cps.ml  run.t
lib/: README.md  ast.mli  dune
lib/ast/: LAst.ml  ast.ml  ast.mli  dune  ident.ml  ident.mli
lib/builtin/: LBuiltin.ml  LBuiltin.mli  builtin.ml  builtin.mli  dune  helpers.ml  helpers.mli  prelude.ml  prelude.mli
lib/eval/: LEval.mli  dune  eval.ml  eval.mli  expr.ml  expr.mli  pattern.ml  pattern.mli  structure.ml  structure.mli  values.ml
lib/eval/test/: dune  run.ml  run.mli  test.ml
lib/infer/: LInfer.ml  LInfer.mli  README.md  assumptions.ml  assumptions.mli  closeOver.ml  closeOver.mli  constraints.ml  constraints.mli  dune  infer.ml  infer.mli  solve.ml  solve.mli  sub.ml  sub.mli  substitution.ml  test.ml  tyError.ml  tyError.mli  utils.ml  utils.mli
lib/infer/solve/: solve.ml  solve.mli  solveMonad.ml  solveMonad.mli  sub.ml  sub.mli  tyError.ml  tyError.mli  unify.ml  unify.mli
lib/infer/test/: basic.ml  dune  effects.ml  run.ml  run.mli  test.ml
lib/misc/: LMisc.ml  LMisc.mli  dune  ident.ml  ident.mli  misc.ml  misc.mli
lib/parse/: LParse.ml  LParse.mli  README.md  common.ml  common.mli  dune  expr.ml  expr.mli  parse.ml  parse.mli  pattern.ml  pattern.mli  structure.ml  structure.mli  test.ml  ty.ml  ty.mli
lib/parse/test/: dune  test.ml
lib/parse/unitTests/: commont.ml  exprt.ml  patternt.ml  patternt.mli  pp.ml  pp.mli  tyt.ml  tyt.mli
lib/parse/unit_tests/: exprt.ml  patternt.ml
lib/parser/: common.ml  common.mli  dune  expr.ml  expr.mli  parser.ml  parser.mli  pattern.ml  pattern.mli  structure.ml  structure.mli  test.ml  typ.ml  typ.mli
lib/parser/unit_tests/: commont.ml  exprt.ml  patternt.ml  typt.ml
lib/types/: LTypes.ml  LTypes.mli  dune  eff.ml  eff.mli  env.ml  env.mli  scheme.ml  scheme.mli  stdEnv.ml  stdEnv.mli  ty.ml  ty.mli  types.ml  types.mli  tys.ml  tys.mli  var.ml  var.mli  varSet.ml  varSet.mli  vars.ml  vars.mli
