(lang dune 3.11)

(name OCamlTyEff)

(generate_opam_files true)

(authors "Andrei Sukharev" "Danil Slinchuk")

(maintainers "Andrei Sukharev" "Danil Slinchuk")

(license MIT)

(package
 (name OCamlTyEff)
 (synopsis "OCaml interpreter with support for typed effects")
 (description "OCaml interpreter with support for typed effects")
 (depends ocaml dune))
