(lang dune 3.7)

(name OCamlTyEff)

(generate_opam_files true)

(cram enable)

(authors "Andrei <therain.i@yahoo.com>" "Danil S <danil.slinchuk@gmail.com>")

(maintainers
 "Andrei <therain.i@yahoo.com>"
 "Danil S <danil.slinchuk@gmail.com>")

(license MIT)

(homepage "https://github.com/therain7/OCamlTyEff")

(bug_reports "https://github.com/therain7/OCamlTyEff/issues")

(package
 (name OCamlTyEff)
 (synopsis "OCaml interpreter with support for typed effects")
 (description "OCaml interpreter with support for typed effects")
 (depends ocaml dune base angstrom ppx_deriving ppx_expect bisect_ppx))
