(include_subdirs unqualified)

(library
 (name parser)
 (public_name OCamlTyEff.Parser)
 (modules
  parser
  common
  expr
  pattern
  typ
  structure
  commont
  patternt
  exprt
  typt)
 (libraries base angstrom ast)
 (preprocess
  (pps ppx_expect ppx_deriving.eq))
 (inline_tests)
 (instrumentation
  (backend bisect_ppx)))

(library
 (name test)
 (modules test)
 (libraries base ast parser)
 (preprocess
  (pps ppx_expect))
 (inline_tests)
 (instrumentation
  (backend bisect_ppx)))
